syntax = "proto3";

package rs.ac.uns.ftn.grpc;
import "Suggestion/Support/Grpc/Protos/model.proto";
service CreateGuestGrpcService {
  rpc createGuest (CreateGuestProto) returns (CreateGuestProtoResponse);
}